Update heading levels in T-F1 qmd

--- a/appendix2-T-F1.qmd
+++ b/appendix2-T-F1.qmd
@@ -5,7 +5,7 @@ format:
     page-layout: full
 ---
 
-## Manchester, John Rylands Library, French 6
+# Manchester, John Rylands Library, French 6
 
 Digitization available via The University of Manchester [HERE](https://luna.manchester.ac.uk/luna/servlet/detail/Man4MedievalVC~4~4~994331~227074?sort=reference_number%2Cimage_sequence_number%2Cparent_work_title%2Cdate_created&qvq=q:French%206;sort:reference_number%2Cimage_sequence_number%2Cparent_work_title%2Cdate_created;lc:Man4MedievalVC~4~4&mi=1&trs=4).
 
@@ -17,7 +17,7 @@ library(xml2)
 ::: {.column-page-outset layout="[[6,6,6,6]]"}
 
 ::: {.column}
-### Nearly Diplomatic
+## Nearly Diplomatic
 
 ```{r tf1-nearly-diplomatic, results='asis'}
 # START OF "NEARLY DIPLOMATIC" CODE
