Source convert-xml-to-html.R function via code chunk

--- a/appendix2-T-C.qmd
+++ b/appendix2-T-C.qmd
@@ -12,8 +12,7 @@ format:
 ::: {.column}
 ## Minimal
 
-```{r}
-source("convert-xml-to-html.R")
+```{r tc-function, file="convert-xml-to-html.R"}
 ```
 
 
