--- a/appendix2-T-D.qmd
+++ b/appendix2-T-D.qmd
@@ -14,8 +14,7 @@ Digitization available via Gallica [HERE](https://gallica.bnf.fr/ark:/12148/btv1
 ::: {.column}
 ## Minimal
 
-```{r}
-source("convert-xml-to-html.R")
+```{r td-function, file="convert-xml-to-html.R"}
 ```
 
 
