--- a/appendix2-T-C.qmd
+++ b/appendix2-T-C.qmd
@@ -18,8 +18,7 @@ library(xml2)
 ::: {.column}
 ## Minimal
 
-```{r}
-source("convert-xml-to-html.R")
+```{r tc-function, file="convert-xml-to-html.R"}
 ```
 
 
