--- a/appendix2-T-E.qmd
+++ b/appendix2-T-E.qmd
@@ -19,8 +19,7 @@ library(xml2)
 ::: {.column}
 ## Minimal
 
-```{r}
-source("convert-xml-to-html.R")
+```{r te-function, file="convert-xml-to-html.R"}
 ```
 
 
