--- a/appendix2-T-F1.qmd
+++ b/appendix2-T-F1.qmd
@@ -86,8 +86,7 @@ cat(formatted_text)
 ::: {.column}
 ## Minimal
 
-```{r}
-source("convert-xml-to-html.R")
+```{r tf1-function, file="convert-xml-to-html.R"}
 ```
 
 
