--- a/appendix2-T-F2.qmd
+++ b/appendix2-T-F2.qmd
@@ -21,8 +21,7 @@ library(xml2)
 ::: {.column}
 ## Minimal
 
-```{r}
-source("convert-xml-to-html.R")
+```{r tf2-function, file="convert-xml-to-html.R"}
 ```
 
 
