--- a/appendix2-T-B.qmd
+++ b/appendix2-T-B.qmd
@@ -89,7 +89,7 @@ cat(formatted_text)
 ```
 
 
-```{r results='asis'}
+```{r tb-minimal, results='asis'}
 
 
 # PRINT "MINIMAL" VERSION
@@ -102,7 +102,7 @@ convert_xml_to_html(xml_file = "data/T-B.xml", version_name = "minimal")
 ::: {.column}
 ## Intermediate
 
-```{r results='asis'}
+```{r tb-intermediate, results='asis'}
 # PRINT "INTERMEDIATE VERSION"
 convert_xml_to_html(xml_file = "data/T-B.xml", version_name = "intermediate")
 
@@ -113,7 +113,7 @@ convert_xml_to_html(xml_file = "data/T-B.xml", version_name = "intermediate")
 ::: {.column}
 ## Extensive
 
-```{r results='asis'}
+```{r tb-extensive, results='asis'}
 #PRINT "EXTENSIVE" VERSION
 convert_xml_to_html(xml_file = "data/T-B.xml", version_name = "extensive")
 
