--- a/appendix2-T-C.qmd
+++ b/appendix2-T-C.qmd
@@ -7,7 +7,7 @@ format:
 
 # Oxford, Corpus Christi College, 232
 
-```{r setup, include=FALSE}
+```{r tc-setup, include=FALSE}
 # Load the xml2 package
 library(xml2)
 ```
@@ -22,7 +22,7 @@ library(xml2)
 ```
 
 
-```{r results='asis'}
+```{r tc-minimal, results='asis'}
 
 
 # PRINT "MINIMAL" VERSION
@@ -35,7 +35,7 @@ convert_xml_to_html(xml_file = "data/T-C.xml", version_name = "minimal")
 ::: {.column}
 ## Intermediate
 
-```{r results='asis'}
+```{r tc-intermediate, results='asis'}
 # PRINT "INTERMEDIATE VERSION"
 convert_xml_to_html(xml_file = "data/T-C.xml", version_name = "intermediate")
 
@@ -46,7 +46,7 @@ convert_xml_to_html(xml_file = "data/T-C.xml", version_name = "intermediate")
 ::: {.column}
 ## Extensive
 
-```{r results='asis'}
+```{r tc-extensive, results='asis'}
 #PRINT "EXTENSIVE" VERSION
 convert_xml_to_html(xml_file = "data/T-C.xml", version_name = "extensive")
 
