--- a/appendix2-T-F2.qmd
+++ b/appendix2-T-F2.qmd
@@ -11,7 +11,7 @@ Digitization available via The Digitized Collections of the Staatsbibliothek zu 
 
 Photograph no.101 (featured upside down online) is the recto, and photograph no.89 is the verso.
 
-```{r setup, include=FALSE}
+```{r tf2-setup, include=FALSE}
 # Load the xml2 package
 library(xml2)
 ```
@@ -25,12 +25,9 @@ library(xml2)
 ```
 
 
-```{r results='asis'}
-
-
+```{r tf2-minimal, results='asis'}
 # PRINT "MINIMAL" VERSION
 convert_xml_to_html(xml_file = "data/T-F2.xml", version_name = "minimal")
-
 ```
 
 :::
@@ -38,10 +35,9 @@ convert_xml_to_html(xml_file = "data/T-F2.xml", version_name = "minimal")
 ::: {.column}
 ## Intermediate
 
-```{r results='asis'}
+```{r tf2-intermediate, results='asis'}
 # PRINT "INTERMEDIATE VERSION"
 convert_xml_to_html(xml_file = "data/T-F2.xml", version_name = "intermediate")
-
 ```
 
 :::
@@ -49,10 +45,11 @@ convert_xml_to_html(xml_file = "data/T-F2.xml", version_name = "intermediate")
 ::: {.column}
 ## Extensive
 
-```{r results='asis'}
+```{r tf2-extensive, results='asis'}
 #PRINT "EXTENSIVE" VERSION
 convert_xml_to_html(xml_file = "data/T-F2.xml", version_name = "extensive")
-
 ```
+
+:::
 
 :::
