--- a/appendix2-T-E.qmd
+++ b/appendix2-T-E.qmd
@@ -9,7 +9,7 @@ format:
 
 Digitization available via Gallica [HERE](https://gallica.bnf.fr/ark:/12148/btv1b55000507q/f232.item).
 
-```{r setup, include=FALSE}
+```{r te-setup, include=FALSE}
 # Load the xml2 package
 library(xml2)
 ```
@@ -23,7 +23,7 @@ library(xml2)
 ```
 
 
-```{r results='asis'}
+```{r te-minimal, results='asis'}
 
 
 # PRINT "MINIMAL" VERSION
@@ -36,7 +36,7 @@ convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "minimal")
 ::: {.column}
 ## Intermediate
 
-```{r results='asis'}
+```{r te-intermediate, results='asis'}
 # PRINT "INTERMEDIATE VERSION"
 convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "intermediate")
 
@@ -47,7 +47,7 @@ convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "intermediate")
 ::: {.column}
 ## Extensive
 
-```{r results='asis'}
+```{r te-extensive, results='asis'}
 #PRINT "EXTENSIVE" VERSION
 convert_xml_to_html(xml_file = "data/T-E.xml", version_name = "extensive")
 
