Add names to code chunks

--- a/chapter2-1.qmd
+++ b/chapter2-1.qmd
@@ -25,8 +25,7 @@ library(xml2)
 ::: {.column}
 ## Minimal
 
-```{r}
-source("convert-xml-to-html.R")
+```{r ch2-1-function, file="convert-xml-to-html.R"}
 ```
 
 ```{r results='asis'}
